--- a/stylesheets/partials/_base.scss
+++ b/stylesheets/partials/_base.scss
@@ -1,2 +1,31 @@
 
 /* Base styles */
+
+// Media queries
+@mixin breakpoint($point) {
+  @if $point == tablet-portrait {
+    @media only screen and (min-width: 768px) and (max-width: 959px) { @content; } 
+  }
+  @else if $point == mobile-portrait {
+    @media only screen and (max-width: 767px) { @content; }
+  }
+  @else if $point == mobile-landscape {
+    @media only screen and (min-width: 480px) and (max-width: 767px) { @content; }
+  }
+}
+
+// Em function
+@function em($target, $context: 16px) {
+   @return #{$target / $context}em;
+}
+
+body {
+	font-size: 16px;
+	margin: 0; 
+	min-height: 1500px;
+	padding: 0;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: Helvetica, sans-serif;
+	margin: 1.25em 0;
+}
