--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -12,8 +12,9 @@ body {
   padding: 0; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Helvetica, sans-serif;
-  margin: 1.25em 0; }
+  font-family: Gotham Bold, Proxima Nova, Helvetica, sans-serif;
+  margin: 1.25em 0;
+  text-transform: uppercase; }
 
 /* Layout styles */
 /* Modules */
@@ -61,6 +62,18 @@ header {
     margin-bottom: 0;
     position: fixed;
     top: 0; }
+
+.next-event h2 {
+  font-size: 2.1875em; }
+  .next-event h2 span {
+    display: block;
+    font-size: 0.875em;
+    font-weight: normal; }
+.next-event p {
+  color: #333;
+  font-family: Gotham Book, Proxima Nova, Arial, sans-serif;
+  font-size: 1.125em;
+  line-height: 24px; }
 
 .fade-screen {
   background-color: #1d1d1d;
