--- a/stylesheets/partials/_base.scss
+++ b/stylesheets/partials/_base.scss
@@ -26,6 +26,7 @@ body {
 	padding: 0;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: Helvetica, sans-serif;
+	font-family: Gotham Bold, Proxima Nova, Helvetica, sans-serif;
 	margin: 1.25em 0;
+  text-transform: uppercase;
 }
