--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -53,7 +53,23 @@ header {
 		top: 0;
 	}
 }
+.next-event {
+	h2 {
+		font-size: em(35px);
 
+		span {
+			display: block;
+			font-size: em(14px);
+			font-weight: normal;
+		}
+	}	
+	p {
+		color: #333;
+		font-family: Gotham Book, Proxima Nova, Arial, sans-serif;
+		font-size: em(18px);
+		line-height: 24px;
+	}
+}
 
 .fade-screen {
     background-color: #1d1d1d;
