--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -65,9 +65,9 @@ header {
 	}	
 	p {
 		color: #333;
-		font-family: Gotham Book, Proxima Nova, Arial, sans-serif;
-		font-size: em(18px);
-		line-height: 24px;
+		font-family: 'Crimson Text', serif;
+		font-size: em(20px);
+		line-height: 26px;
 	}
 }
 
