general style changes

--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -33,12 +33,12 @@ header {
 .header__billboard h2 {
   color: #fff;
   font-size: 3.75em;
-  font-weight: 100;
+  font-weight: 400;
   position: relative;
   z-index: 3; }
   .header__billboard h2 em {
     font-style: normal;
-    font-weight: 600; }
+    font-weight: 700; }
 @media only screen and (max-width: 767px) {
   .header__billboard h2 {
     font-size: 2em; } }
@@ -68,13 +68,14 @@ header {
     top: 0; }
 
 .next-event h2 {
-  font-size: 2.1875em; }
+  font-size: 2.1875em;
+  margin-bottom: 20px; }
   .next-event h2 span {
     display: block;
     font-size: 0.875em;
     font-weight: normal; }
 .next-event p {
-  color: #333;
+  color: #666;
   font-family: 'Crimson Text', serif;
   font-size: 1.25em;
   line-height: 26px; }
