--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -14,12 +14,12 @@ header {
 	h2 {
 		color: #fff;
 		font-size: em(60px);
-		font-weight: 100;
+		font-weight: 400;
 		position: relative;
 		z-index: 3;
 		em {
 			font-style: normal;
-			font-weight: 600;
+			font-weight: 700;
 		}
 	}
 	@include breakpoint(mobile-portrait) {
@@ -56,6 +56,7 @@ header {
 .next-event {
 	h2 {
 		font-size: em(35px);
+		margin-bottom: 20px;
 
 		span {
 			display: block;
@@ -64,7 +65,7 @@ header {
 		}
 	}	
 	p {
-		color: #333;
+		color: #666;
 		font-family: 'Crimson Text', serif;
 		font-size: em(20px);
 		line-height: 26px;
