--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -57,10 +57,9 @@ header {
 	h2 {
 		font-size: em(35px);
 		margin-bottom: 20px;
-
 		span {
 			display: block;
-			font-size: em(14px);
+			font-size: em(16px, 35px);
 			font-weight: normal;
 		}
 	}	
