--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -13,7 +13,9 @@ body {
   padding: 0; }
 
 h1, h2, h3, h4, h5, h6 {
+  color: #827238;
   font-family: 'Montserrat', Helvetica, sans-serif;
+  letter-spacing: 3px;
   margin: 1.25em 0;
   text-transform: uppercase; }
 
@@ -66,13 +68,52 @@ header {
     margin-bottom: 0;
     position: fixed;
     top: 0; }
+  .header__nav h2 {
+    background: url(../../img/logo_horizontal.png) left top no-repeat;
+    background-size: 100%;
+    float: left;
+    margin: 9px 0;
+    max-width: 200px;
+    min-height: 50px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap; }
+  .header__nav nav {
+    text-align: right;
+    padding: 20px 0; }
+    .header__nav nav a {
+      border: 1px solid #1d1d1d;
+      color: #fff;
+      font-family: 'Montserrat', Helvetica, sans-serif;
+      letter-spacing: 3px;
+      margin-left: 25px;
+      padding: 7px 10px;
+      text-decoration: none;
+      text-transform: uppercase; }
+      .header__nav nav a.-current {
+        border: 1px solid #fff; }
+  @media only screen and (max-width: 767px) {
+    .header__nav {
+      max-height: 85px; }
+      .header__nav h2 {
+        background: url(../../img/logo_alt.png) left top no-repeat;
+        background-size: 100%;
+        margin: 12px 0;
+        max-width: 40px; }
+      .header__nav nav a {
+        font-size: 0.75em;
+        margin-left: 7px;
+        padding: 5px; }
+        .header__nav nav a:first-child {
+          margin-left: 0; } }
 
 .next-event h2 {
   font-size: 2.1875em;
   margin-bottom: 20px; }
   .next-event h2 span {
+    color: #1d1d1d;
     display: block;
-    font-size: 0.45714em;
+    font-size: 0.51429em;
     font-weight: normal; }
 .next-event p {
   color: #666;
