--- a/stylesheets/partials/_base.scss
+++ b/stylesheets/partials/_base.scss
@@ -27,7 +27,9 @@ body {
 	padding: 0;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Montserrat', Helvetica, sans-serif;
+  color: #827238;
+  font-family: 'Montserrat', Helvetica, sans-serif;
+  letter-spacing: 3px;
 	margin: 1.25em 0;
   text-transform: uppercase;
 }
