--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -52,14 +52,62 @@ header {
 		position: fixed;
 		top: 0;
 	}
+	h2 {
+		background: url(../../img/logo_horizontal.png) left top no-repeat;
+		background-size: 100%;
+		float: left;
+		margin: 9px 0;
+		max-width: 200px;
+		min-height: 50px;
+		overflow: hidden;
+		text-indent: 100%;
+		white-space: nowrap;
+	}
+	nav {
+		text-align: right;
+		padding: 20px 0;
+		a {
+			border: 1px solid #1d1d1d;
+			color: #fff;
+			font-family: 'Montserrat', Helvetica, sans-serif;
+			letter-spacing: 3px;
+			margin-left: 25px;
+			padding: 7px 10px;
+			text-decoration: none;
+			text-transform: uppercase;
+			&.-current {
+				border: 1px solid #fff;
+			}
+		}
+	}
+	@include breakpoint(mobile-portrait) {
+		max-height: 85px;
+		h2 { 
+			background: url(../../img/logo_alt.png) left top no-repeat;
+			background-size: 100%;
+			margin: 12px 0;
+			max-width: 40px;
+		}
+		nav {
+			a {
+				font-size: em(12px);
+				margin-left: 7px;
+				padding: 5px;
+				&:first-child {
+					margin-left: 0;
+				}
+			}
+		}
+	}
 }
 .next-event {
 	h2 {
 		font-size: em(35px);
 		margin-bottom: 20px;
 		span {
+			color: #1d1d1d;
 			display: block;
-			font-size: em(16px, 35px);
+			font-size: em(18px, 35px);
 			font-weight: normal;
 		}
 	}	
