--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -131,6 +131,7 @@ header {
     text-align: center;
     color: #fff;
     font-family: 'Montserrat';
+    letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase; }
   .newsletter a:hover {
@@ -141,6 +142,22 @@ header {
     display: inline-block;
     padding: 20px;
     text-align: center; }
+
+.about {
+  margin-bottom: 20px; }
+  .about h2 {
+    font-size: 2.1875em;
+    margin-bottom: 20px; }
+    .about h2 span {
+      color: #1d1d1d;
+      display: block;
+      font-size: 0.51429em;
+      font-weight: normal; }
+  .about p {
+    color: #666;
+    font-family: 'Crimson Text', serif;
+    font-size: 1.25em;
+    line-height: 26px; }
 
 .fade-screen {
   background-color: #1d1d1d;
