Smooth CSS transition for active nag borders.

--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -75,11 +75,19 @@ header {
 			padding: 7px 10px;
 			text-decoration: none;
 			text-transform: uppercase;
+			-webkit-transition: border 0.35s ease;
+			-moz-transition: border 0.35s ease;
+			-o-transition: border 0.35s ease;
+			transition: border 0.35s ease;
 			&:hover {
-				border: 1px solid #333;
+				border: 1px solid #444;
 			}
 			&.-current {
 				border: 1px solid #fff;
+				-webkit-transition: border 0.35s ease;
+				-moz-transition: border 0.35s ease;
+				-o-transition: border 0.35s ease;
+				transition: border 0.35s ease;
 			}
 		}
 	}
