--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -90,11 +90,19 @@ header {
       margin-left: 25px;
       padding: 7px 10px;
       text-decoration: none;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      -webkit-transition: border 0.35s ease;
+      -moz-transition: border 0.35s ease;
+      -o-transition: border 0.35s ease;
+      transition: border 0.35s ease; }
       .header__nav nav a:hover {
-        border: 1px solid #333; }
+        border: 1px solid #444; }
       .header__nav nav a.-current {
-        border: 1px solid #fff; }
+        border: 1px solid #fff;
+        -webkit-transition: border 0.35s ease;
+        -moz-transition: border 0.35s ease;
+        -o-transition: border 0.35s ease;
+        transition: border 0.35s ease; }
   @media only screen and (max-width: 767px) {
     .header__nav {
       max-height: 85px; }
