--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -110,13 +110,23 @@ header {
         background: url(../../img/logo_alt.png) left top no-repeat;
         background-size: 100%;
         margin: 12px 0;
-        max-width: 40px; }
+        max-width: 35px; }
       .header__nav nav a {
-        font-size: 0.75em;
-        margin-left: 7px;
-        padding: 5px; }
+        font-size: 0.625em;
+        margin-left: 5px;
+        padding: 3px; }
         .header__nav nav a:first-child {
           margin-left: 0; } }
+  @media only screen and (min-width: 480px) and (max-width: 767px) {
+    .header__nav nav a {
+      font-size: 0.75em;
+      margin-left: 7px;
+      padding: 5px; }
+      .header__nav nav a:first-child {
+        margin-left: 0; } }
+
+.layer {
+  padding: 30px 0; }
 
 .next-event h2 {
   font-size: 2.1875em;
