--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -97,8 +97,20 @@ header {
 			background: url(../../img/logo_alt.png) left top no-repeat;
 			background-size: 100%;
 			margin: 12px 0;
-			max-width: 40px;
+			max-width: 35px;
 		}
+		nav {
+			a {
+				font-size: em(10px);
+				margin-left: 5px;
+				padding: 3px;
+				&:first-child {
+					margin-left: 0;
+				}
+			}
+		}
+	}
+	@include breakpoint(mobile-landscape) {
 		nav {
 			a {
 				font-size: em(12px);
@@ -111,6 +123,11 @@ header {
 		}
 	}
 }
+
+.layer {
+	padding: 30px 0;
+}
+
 .next-event {
 	h2 {
 		font-size: em(35px);
