--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -180,6 +180,31 @@ header {
     font-size: 1.25em;
     line-height: 26px; }
 
+footer {
+  background: #1d1d1d;
+  color: #fff;
+  padding: 25px 0;
+  text-align: center; }
+  footer i {
+    color: #ddd;
+    font-size: 2.625em;
+    margin: 10px 20px; }
+    footer i:hover {
+      color: #fff; }
+  footer p {
+    font-size: 0.875em; }
+
+.footer__logo {
+  background: url(../../img/logo.png) left top no-repeat;
+  background-size: 100%;
+  height: 82px;
+  margin: 75px auto 20px auto;
+  max-width: 82px;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  width: 20%; }
+
 .fade-screen {
   background-color: #1d1d1d;
   display: block;
