--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -193,6 +193,36 @@ header {
 	}
 }
 
+footer {
+	background: #1d1d1d;
+	color: #fff;
+	//min-height: 300px;
+	padding: 25px 0;
+	text-align: center;
+	i {
+		color: #ddd;
+		font-size: em(42px);
+		margin: 10px 20px;
+		&:hover {
+			color: #fff;
+		}
+	}
+	p {
+		font-size: em(14px);
+	}
+}
+.footer__logo {
+	background: url(../../img/logo.png) left top no-repeat;
+	background-size: 100%;
+	height: 82px;
+	margin: 75px auto 20px auto;
+	max-width: 82px;
+	overflow: hidden;
+	text-indent: 100%;
+	white-space: nowrap;
+	width: 20%;
+}
+
 .fade-screen {
     background-color: #1d1d1d;
     display: block;
