Footer spacing tweak.

--- a/stylesheets/partials/_modules.scss
+++ b/stylesheets/partials/_modules.scss
@@ -219,6 +219,9 @@ footer {
 	text-indent: 100%;
 	white-space: nowrap;
 	width: 20%;
+	@include breakpoint(mobile-portrait) {
+		margin-top: 45px;
+	}
 }
 
 .fade-screen {
