--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -208,6 +208,9 @@ footer {
   text-indent: 100%;
   white-space: nowrap;
   width: 20%; }
+  @media only screen and (max-width: 767px) {
+    .footer__logo {
+      margin-top: 45px; } }
 
 .fade-screen {
   background-color: #1d1d1d;
